--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -20,3 +20,100 @@
     border-radius: 50%;
 }
 
+.main .mainContainer{
+    max-width: 900px;
+    margin: auto;
+}
+
+.main .greet{
+    text-align: center;
+    margin: 50px 0;
+    font-size: 56px;
+    color: #c4c7c5;
+    font-weight:500;
+    padding: 20px;
+}
+
+.main .greet span{
+    background: -webkit-linear-gradient(16deg , #4b90ff , #ff5546);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.main .cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(180px , 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.card{
+    background: #f0f4f9;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.card:hover{
+    transform: translateY(-10px);
+}
+
+.card img{
+    width: 35px;
+    padding: 5px;
+    margin-top: 10px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.card p{
+    margin-top: 15px;
+    font-size: 18px;
+    color: #585858;
+    font-weight: 500;
+}
+
+.main .mainBottom{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-width: 900px;
+    padding: 0 20px;
+    margin: auto;   
+}
+
+.searchbox{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #f0f4f9;
+    padding: 10px 20px;
+    border-radius: 50px;
+}
+
+.searchbox img{
+    width: 25px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.searchbox input{
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+    font-size: 18px;
+    padding: 8px;
+}
+
+.bottomInfo{
+    font-size: 13px;
+    margin: 15px auto;
+    text-align: center;
+    font-weight: 300;
+}
